# TZ_HatikoTech

./: .env.simple  README.md  manage.py  pyproject.toml
TZ_HatikoTech/: asgi.py  settings.py  urls.py  wsgi.py
bot/: main_bot.py
bot/management/commands/: run_bot.py
imei/: services.py  urls.py  views.py
